# JVRCPlugin

./: .travis.sh  .travis.yml  CMakeLists.txt  JVRC-Robot-Marker.wrl  JVRC-Task-R3_A.yaml  JVRC-Task-R4_A.yaml  JVRCBar.cpp  JVRCBar.h  JVRCInfo.yaml  JVRCManagerItem.cpp  JVRCManagerItem.h  JVRCPlugin.cpp  JVRCScoreView.cpp  JVRCScoreView.h  JVRCTask.cpp  JVRCTask.h  JVRCTaskInfo.cpp  JVRCTaskInfo.h  README.md  SceneNodeFinder.cpp  SceneNodeFinder.h  SphereMarkerDevice.cpp  SphereMarkerDevice.h  exportdecl.h  test.cnoid
customizer/: CMakeLists.txt  CabinetBoxCustomizer.cpp  HoseCustomizer.cpp
python/: CMakeLists.txt  PyJVRCPlugin.cpp
